--- a/less/theme.less
+++ b/less/theme.less
@@ -492,15 +492,14 @@ body {
     }
   }
 }
-
+.dataTables_length {
+  padding-top: 4px;
+}
 .dataTables_filter {
-    float:right;
+  float:right;
 }
 .dataTables_info {
-    float:left;
-}
-.dataTable_paginate {
-    float:right;
+  float:left;
 }
 .selectpicker {
     width: 100% !important;
