Add @panel-margin-bottom variable

--- a/less/panels.less
+++ b/less/panels.less
@@ -5,7 +5,7 @@
 
 // Base class
 .panel {
-  margin-bottom: @line-height-computed;
+  margin-bottom: @panel-margin-bottom;
   background-color: @panel-bg;
   border: 1px solid transparent;
   border-radius: @panel-border-radius;
