--- a/less/variables.less
+++ b/less/variables.less
@@ -704,6 +704,7 @@
 
 @panel-bg:                    #fff;
 @panel-body-padding:          15px;
+@panel-margin-bottom:         @line-height-computed
 @panel-heading-padding:       10px 15px;
 @panel-footer-padding:        @panel-heading-padding;
 @panel-border-radius:         @border-radius-base;
